# rs-wasi-conv

./: Cargo.toml  README.md
.github/workflows/: rust.yml
example/: Dockerfile  README.md  in.csv
example/wasi-csv2json/: Cargo.toml
example/wasi-csv2json/src/: event.rs  lib.rs
example/wasi-dummy-copy/: Cargo.toml
example/wasi-dummy-copy/src/: lib.rs
example/wasi-json2cbor/: Cargo.toml
example/wasi-json2cbor/src/: lib.rs
src/: main.rs
