[package]
name = "rs-wasi-conv"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A conversion manager using wasi"
repository = "https://github.com/takanoriyanagitani/rs-wasi-conv"
documentation = "https://docs.rs/crate/rs-wasi-conv/latest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge-sdk = "0.3.0"
wasmedge-types = "0.2.0"
