[package]
name = "wasi-json2cbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies]
ciborium = "0.2.0"
serde = {version="1.0.144", features=["derive"]}
serde_json = "1.0.85"
